# emu-jukebox

./: .gitignore  .gitmodules  CMakeGme2FilesBackup.txt  CMakeLists.txt  CMakeSFMLSources.txt  EmuJukeboxConfig.h  EmuJukeboxConfig.h.in  LICENSE  PixelmoundConfig.h  README.md  main.cpp
.github/workflows/: ci-linux-clang.yml  ci-linux-gcc.yml  ci-macos-clang.yml  ci-windows-msvc.yml
content/: files_mapper.h
content/test_files/: test.hes  test.kss  test.nsf  test.nsfe  test.sap  test.spc
external_libs/include/: catch.hpp  json.hpp
external_libs/include/imgui/: imgui-SFML.cpp  imgui.cpp  imgui_internal.h  imstb_textedit.h
external_libs/include/imgui/docs/: CHANGELOG.txt  README.md
external_libs/include/imgui/misc/cpp/: imgui_stdlib.cpp
external_libs/include/imgui_/: imconfig.h  imgui-SFML.h
external_libs/include/imgui_/misc/cpp/: imgui_stdlib.cpp
external_libs/include/libgme/: Ym2612_Emu.h  blargg_common.h  gme.h
external_libs/include/libgme2/: Blip_Buffer.h  Data_Reader.h  blargg_common.h  dbopl.h  gme_custom_dprintf.h
external_libs/include/libgme2/higan/dsp/: SPC_DSP.h
external_libs/include/libgme2/ignore/: Spc_Emu.h
external_libs/libs/win/debug/msvc/sfml/: sfml-main-d.lib  sfml-system-s-d.lib
external_libs/libs/win/release/msvc/sfml/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s.lib  sfml-window-s.lib
external_libs/source/SFML/Window/Win32/: JoystickImpl.cpp  WindowImplWin32.cpp
external_libs/source/gme/: Data_Reader.cpp  gme.cpp
external_libs/source/gme2/: Data_Reader.cpp  Spc_Cpu.cpp
external_libs/source/gme2/higan/processor/spc700/: algorithms.cpp  disassembler.cpp
logo/: AppIcon.icns  emu-jukebox_logo.xcf  icon.rc
src/audio/: AudioCommon.h  EmuEqualizer.cpp  EmuEqualizer.h  EmuFile.cpp  EmuFile.h  EmuFileInfo.cpp  EmuFileInfo.h  EmuStream.cpp  EmuStream.h  EmuTrack.cpp  EmuTrack.h  EmuTrackInfo.cpp  EmuTrackInfo.h  Voice.cpp  Voice.h
src/classes/: Font.cpp  Font.h  Hotkey.cpp  Hotkey.h  PlaylistData.cpp  PlaylistData.h  Timer.cpp  Timer.h
src/data/: IniFile.cpp  IniFile.h  JsonFile.cpp  JsonFile.h  PlaylistFile.cpp  PlaylistFile.h
src/forms/: AudioPlayerForm.cpp  AudioPlayerForm.h  AudioTestForm.cpp  AudioTestForm.h  FileDialog.cpp  FileDialog.h  FileTable.cpp  FileTable.h  FilelistForm.cpp  FilelistForm.h  PlaylistForm.cpp  PlaylistForm.h  SystemLog.cpp  SystemLog.h
src/gui/: GuiManager.cpp  GuiManager.h  TextEditor.cpp  TextEditor.h
src/gui/controls/: Checkbox.cpp  Checkbox.h  CheckboxSection.cpp  CheckboxSection.h  ColorPicker.cpp  Column.h  Combobox.cpp  Combobox.h  Control.cpp  Control.h  DataColumn.cpp  DataColumn.h  DataColumnDefinition.h  DataRow.cpp  DataRow.h  DataTable.cpp  DataTable.h  DragInt.cpp  DragInt.h  Image.cpp  ImageButton.cpp  ImageButton.h  InputFloat.cpp  InputFloat.h  InputInt.cpp  InputInt.h  Label.cpp  Label.h  Listbox.cpp  MenuItem.cpp  MenuItemCollection.cpp  Progressbar.h  RadioSection.cpp  RadioSection.h  Row.h  Selectable.cpp  Selectable.h  SliderFloat.cpp  SliderFloat.h  SliderInt.cpp  (+8 more)
src/gui/forms/: Form.cpp  Form.h  MessagePopup.cpp  MessagePopup.h  Popup.cpp  Popup.h  TextEditorForm.cpp  TextEditorForm.h
src/gui/properties/: Tooltip.cpp  Tooltip.h
src/gui/themes/: Theme.h
src/gui_/: TextEditor.cpp
src/gui_/controls/: Button.cpp  Button.h  Child.cpp  Child.h  ColorButton.cpp  ColorButton.h  ColorPicker.h  ColoredText.cpp  ColoredText.h  Column.cpp  Combobox.cpp  Control.cpp  DataColumnDefinition.cpp  DataRow.cpp  DataRow.h  DataTable.cpp  DragFloat.cpp  DragFloat.h  Group.cpp  Group.h  Image.h  ImageButton.cpp  InputFloat.cpp  Listbox.h  MenuBar.cpp  MenuBar.h  MenuItem.h  MenuItemCollection.h  Progressbar.cpp  Row.cpp  SliderInt.h  Table.cpp  Textbox.cpp  TreeList.cpp  TreeNode.h  Visualizer.h
src/gui_/forms/: Form.cpp  Form.h  Popup.cpp
src/gui_/properties/: RadioData.cpp  RadioData.h
src/gui_/themes/: Theme.cpp
src/managers/: ClipboardManager.cpp  ClipboardManager.h  EventManager.cpp  EventManager.h  FontManager.cpp  FontManager.h  FormManager.cpp  FormManager.h  Hotkeys.cpp  Hotkeys.h  ProgramManager.cpp  ProgramManager.h
src/misc/: EmuThemes.hpp  EnumBitflags.hpp  Enums.hpp  Math.hpp  Tools.hpp
src/popups/: AboutPopup.cpp  AboutPopup.h  EmuFileExporterPopup.cpp  EmuFileExporterPopup.h  PreferencesPopup.cpp  PreferencesPopup.h
src/widgets/: FileDialog.cpp  FileDialog.h  FileTable.cpp  FileTable.h
src/widgets_/: FileDialog.cpp  FileTable.cpp
tests/: CMakeLists.txt  tests_main.cpp
